Updates all around

--- a/reflection.html
+++ b/reflection.html
@@ -63,7 +63,7 @@
                     </p>
                     <p>
                         When the light hits a convex part of the mirror, it tends to spread out, and the rays don't flip. This is why convex mirrors
-                        and more boring than concave mirrors.
+                        are more boring than concave mirrors.
                     </p>
                 </div>
                 <div id="reflection_dome" class="column sim-container"></div>
@@ -79,7 +79,7 @@
                         <b id="percent-reflectance">50%</b> of the light that hits it. It lets another
                         <b id="percent-transmission">10%</b> through, and the absorbs the other
                         <b id="percent-absorbance">40%</b>. The absorbed light gets turned into heat.
-                        Real mirrors tend to have reflectances within 80% - 99%.
+                        Real mirrors tend to have reflectances within 80% - 99%, and absorb the rest.
                     </p>
                 </div>
                 <div id="bezier" class="column sim-container"></div>
@@ -91,14 +91,14 @@
                     <p>
                         Focusing light is very useful. It can help to 
                         amplify a weak signal, heat water in a 
-                        solar collector, and light things on fire.
+                        solar collector, and light things on fire, among other uses.
                     </p>
                     <p>
                         Since curved mirrors focus light, you can use a half circle to focus a beam onto a point.
                     </p>
                     <p>
-                        But, as you can see to the right, not all of the light is focused. Most rays just bounce out of the circle entirely. The
-                        rays that do hit the focus don't focus into a point, but rather into a upside down heart like shape (cardioid).
+                        But, as you can see to the right, not all of the light is focused. Most rays just bounce out of the circle without coming near the focus. 
+                        The rays that do hit the focus don't focus into a point, but rather into a upside down heart like shape (cardioid).
                         This is more visible when the radius of the circle is smaller.
                     </p>
                     <p>
@@ -145,15 +145,15 @@
                         This simulation shows how satellite dishes work.
                     </p>
                     <p>
-                        Satellite dishes are 3D parabolas, which are called parabaloids.
+                        Satellite dishes are 3D parabolas (parabaloids).
                         Every satellite dish has a rod that sticks out from it. 
                         At the end of the rod is the transceiver. It can emit and detect
                         radio waves, which are a kind of light that we humans can't see naturally.
                     </p>
                     <p>
                         The rod is used to position the transceiver at the parabola's focal point, so it can easily pick up all incoming light. When
-                        two dishes are pointed at each other, any light from one of them will be focused into a beam, which then
-                        hits the other dish, where it gets focused onto the other's receiver.
+                        two dishes are pointed at each other, any light from one of them will be focused into a 
+                        beam that points toward the other dish, where it gets focused onto the other's receiver.
                     </p>
                     <p>
                         (These rays are limited to only 
@@ -169,13 +169,13 @@
                 <div class="explanation column">
                     <h3 class="title">The Ellipse</h3>
                     <p>
-                        An ellipse, or oval, has two focal points. When a light is placed 
-                        at one focal point, all of it's light is focused onto the other focal point.
+                        An ellipse, or oval, can also focus light. It has two focal points. When a light is placed 
+                        at one focal point, all of its rays are focused onto the other focal point.
                     </p>
                     <p>
                         A lot of phenomena related to reflecting light also work for sound. 
                         For example, if you stand in the focal point of an elliptical room, 
-                        and whisper, you're whisper will be focused onto the other focal point. 
+                        and whisper, your whisper will be focused onto the other focal point. 
                         Someone at that point will therefore be able to hear you whispering from across the room. 
                     </p>
                     <p>
