Added a refraction sim

--- a/refraction.html
+++ b/refraction.html
@@ -109,6 +109,28 @@
             <div class="columns">
                 <div class="explanation column">
                     <h3 class="title">Refraction</h3>
+                    <h3 class="subtitle">Curved Surfaces</h3>
+                    <p>
+                        Compared to mirrors, refractive materials, like glass, 
+                        behave the opposite way. While concave mirrors focus light,
+                        concave glass spreads the light rays out. 
+                        And while convex mirrors spread light out, convex glass 
+                        focuses light. 
+                    </p>
+                    <p>
+                        You can even see how the mirrors would have behaved 
+                        with the partial reflection of the glass.
+                    </p>
+                    <p>
+                        The slider on the left controls how many times the light rays are allowed to 
+                        "bounce," which includes both reflections and refractions. 
+                    </p>
+                </div>
+                <div class="sim-container column" id="curved_glass"></div>
+            </div>
+            <div class="columns">
+                <div class="explanation column">
+                    <h3 class="title">Refraction</h3>
                     <h3 class="subtitle">Focusing Light, Part 2</h3>
                     <p>
                         To the right is a lens made out of two arcs of a circle. 
@@ -142,6 +164,8 @@
                         The atmosphere has a slightly higher 
                         refractive index than the vacuum around it. This causes 
                         it to bend the light that hits the atmosphere but misses the planet.
+                        In reality, this refractive index would not be constant, but would vary 
+                        with the altitude above the planet.
                     </p>
                     <p>
                         This refraction causes two phenomena. First, you can see the 
@@ -151,7 +175,7 @@
                     </p>
                     <p>
                         The other phenomena is the shape of Earth's shadow. 
-                        For most objects, like the moon, their shadows get larger as they get farther away.
+                        For most objects, like the moon, their shadows get larger the farther away from them you go.
                         But by bending the light, the darkest part of Earth's shadow (the umbra) actually gets smaller.
                         The area where the bent light travels, instead of being a full shadow,
                         is now only a partial shadow (the penumbra).
@@ -170,7 +194,7 @@
                         On the bright side, 
                         the partial reflection from the bright light 
                         will outshine any light transmitted through the glass 
-                        from the dark side, making that side look metallic.
+                        from the dark side, making that side look like a mirror.
                         On the dark side, the bright light transmitted through 
                         the glass will outshine the partial reflection 
                         from the dark light.
@@ -230,6 +254,7 @@
     <!-- <script src="alt_lens.js"></script> -->
     <script src="oneway.js"></script>
     <script src="planet_shadows.js"></script>
+    <script src="curved_glass.js"></script>
 </body>
 
 </html>
