Some updates. Virtual images

--- a/reflection.html
+++ b/reflection.html
@@ -50,6 +50,35 @@
                 <div id="reflection_flat" class="column sim-container"></div>
             </div>
             <div class="columns">
+                <div class="column explanation">
+                    <h3 class="title">Virtual Images</h3>
+                    <p>
+                        Over to the right, there are two lights, red and blue, and a mirror.
+                        If you stood next to the red light, and looked at it, well, it would 
+                        look like where it was. Not very exciting.
+                    </p>
+                    <p>
+                        But if you looked at the red lamps reflection, it would appear to be where the blue lamp is. The blue lamp represents the
+                        red lamps <b>virtual image.</b> You'll notice that the virtual image is flipped perpendicular to the plane of the mirror.
+                        This means that what points towards the mirror now points away from it. 
+                        But left still points left, and right still points right.
+                    </p>
+                    <p>
+                        If you're wondering now why the text on your shirt looks backward in a mirror, 
+                        I think this <a href="https://www.youtube.com/watch?v=vBpxhfBlVLU">video by Physics Girl</a>
+                        does a good job of explaining that.
+                    </p>
+                    <p>
+                        Side note: you might notice that it is impossible to tell if the purple rays came from the 
+                        reflection of the red lamp, or were the rays from the blue lamp transmitted 
+                        through the mirror... 
+                    </p>
+                </div>
+                <div class="column sim-container" id="virtual_images">
+                    
+                </div>
+            </div>
+            <div class="columns">
                 <div class="explanation column">
                     <h3 class="title">Curved mirrors</h3>
                     <p>
@@ -223,6 +252,7 @@
     <script src="parabola2.js"></script>
     <script src="bezier.js"></script>
     <script src="ellipse.js"></script>
+    <script src="virtual.js"></script>
 </body>
 
 </html>
