Added some footnotes!

--- a/reflection.html
+++ b/reflection.html
@@ -6,6 +6,7 @@
     <title>Optics</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="bulma.min.css" />
+    <link rel="stylesheet" type="text/css" href="bulma-tooltip.min.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="old.css" />
 </head>
 
@@ -59,15 +60,16 @@
                     </p>
                     <p>
                         But if you looked at the red lamps reflection, it would appear to be where the blue lamp is. The blue lamp represents the
-                        red lamps <b>virtual image.</b> You'll notice that the virtual image is flipped perpendicular to the plane of the mirror.
-                        This means that what points towards the mirror now points away from it. 
+                        red lamps <b>virtual image.</b> 
+                        You'll notice that the virtual image is flipped perpendicular to the plane of the mirror.
+                        This means that what points down in this simulation now points up. 
                         But left still points left, and right still points right.
                     </p>
-                    <p>
+                    <!-- <p>
                         If you're wondering now why the text on your shirt looks backward in a mirror, 
                         I think this <a href="https://www.youtube.com/watch?v=vBpxhfBlVLU">video by Physics Girl</a>
                         does a good job of explaining that.
-                    </p>
+                    </p> -->
                     <p>
                         Side note: you might notice that it is impossible to tell if the purple rays came from the 
                         reflection of the red lamp, or were the rays from the blue lamp transmitted 
@@ -120,7 +122,7 @@
                     <p>
                         Focusing light is very useful. It can help to 
                         amplify a weak signal, heat water in a 
-                        solar collector, and light things on fire, among other uses.
+                        solar collector, and light things on fire, among other uses.<sup class="tooltip is-tooltip-right is-tooltip-multiline" data-tooltip="Please don't try lighting things on fire at home">*</sup>
                     </p>
                     <p>
                         Since curved mirrors focus light, you can use a half circle to focus a beam onto a point.
@@ -142,7 +144,9 @@
                 <div class="explanation column">
                     <h3 class="title">The Parabola</h3>
                     <p>
-                        The parabola is another choice for focusing light, and as you will see, it focuses light far better than the circle.
+                        The parabola is another choice for focusing light, and as you will see, it focuses light far better than the circle.<sup class="tooltip is-tooltip-right is-tooltip-multiline" data-tooltip="In fact, it can be mathematically
+                    proven that every light ray coming down vertically onto a parabola will all be reflected towards the
+ same point, the parabola's focal point">*</sup>
                         <!--In fact, it can be mathematically
                     proven that every light ray coming down vertically onto a parabola will all be reflected towards the
  same point, the parabola's focal point.-->
@@ -174,7 +178,7 @@
                         This simulation shows how satellite dishes work.
                     </p>
                     <p>
-                        Satellite dishes are 3D parabolas (parabaloids).
+                        Satellite dishes are 3D parabolas.<sup class="tooltip is-tooltip-multiline is-tooltip-right" data-tooltip="These are called parabaloids">*</sup>
                         Every satellite dish has a rod that sticks out from it. 
                         At the end of the rod is the transceiver. It can emit and detect
                         radio waves, which are a kind of light that we humans can't see naturally.
