--- a/refraction.html
+++ b/refraction.html
@@ -6,6 +6,7 @@
     <title>Optics</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="bulma.min.css" />
+    <link rel="stylesheet" type="text/css" href="bulma-tooltip.min.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="old.css" />
 </head>
 
@@ -57,7 +58,8 @@
                         This is why when you look straight down at the ocean, it appears clear, but from a shallow angle, it appears reflective.
                     </p>
                     <p>
-                        Snell's law does not always give an answer. For example, when light starts in a material with a higher IOR than its surroundings, 
+                        Snell's law does not always give an answer.<sup class="tooltip is-tooltip-multiline is-tooltip-right" data-tooltip="This is because trig functions, like sin, have a limited range of outputs">*</sup> 
+                        For example, when light starts in a material with a higher IOR than its surroundings, 
                         and hits the surface at a shallow enough angle, Snell's law provides no answer. 
                         When that happens, all of the light is reflected, which is called <b>total internal reflection.</b>
                     </p>
@@ -249,12 +251,12 @@
                     <p>
                         As you can see, the cable made of mirrors will start to absorb 
                         so much light that barely any makes it through. The glass cable, on the other hand, lets the 
-                        light through at full strength, though it can lose some around the bend.  
+                        light through at full strength, though it can lose some around sharp bends.  
                     </p>
                     <p>
-                        The glass cable, because it loses so little light, is the preferred one for communication uses. 
+                        The glass cable, because it loses so little light,<sup class="tooltip is-tooltip-right is-tooltip-multiline" data-tooltip="In messy reality, tiny imperfections in the glass cable do cause it to lose some light over distance">*</sup> is the preferred one for communication uses. 
                         These kinds of glass cables are called fiber optic cables, and they are 
-                        used to connect large portions of the internet. 
+                        used to connect large portions of the internet.<sup class="tooltip is-tooltip-right is-tooltip-multiline" data-tooltip="This is where the fiber in Google Fiber comes from">*</sup> 
                         This very website could easily have arrived on your computer via a fiber optic cable.
                     </p>
                 </div>
