--- a/refraction.html
+++ b/refraction.html
@@ -21,6 +21,7 @@
                     <a class="navbar-item" href="index.html">Home</a>
                     <a class="navbar-item" href="reflection.html">Reflection</a>
                     <a class="navbar-item" href="refraction.html">Refraction</a>
+                    <a class="navbar-item" href="color.html">Color</a>
                 </div>
 
             </div>
