Added some color

--- a/color.html
+++ b/color.html
@@ -35,8 +35,7 @@
                     <h3 class="subtitle">Additive Mixing</h3>
 
                 </div>
-                <div class="column sim-container">
-                    <div id="color_mixing"></div>
+                <div class="column sim-container" id="color_mixing">
                 </div>
             </div>
             <div class="columns">
@@ -45,8 +44,16 @@
                     <h3 class="subtitle">Prisms</h3>
 
                 </div>
-                <div class="column sim-container">
-                    <div id="dispersion"></div>
+                <div class="column sim-container" id="dispersion">
+                </div>
+            </div>
+            <div class="columns">
+                <div class="explanation column">
+                    <h3 class="title">Dispersion</h3>
+                    <h3 class="subtitle">Lenses, revisited</h3>
+
+                </div>
+                <div class="column sim-container" id="chromatic_aberration">
                 </div>
             </div>
             <div class="columns">
@@ -67,6 +74,7 @@
     <script src="geometry.js"></script>
     <script src="ui.js"></script>
     <script src="color_mixing.js"></script>
+    <script src="dispersion.js"></script>
 </body>
 
 </html>
