--- a/refraction.html
+++ b/refraction.html
@@ -266,14 +266,15 @@
             
             <div class="columns">
                 <div class="explanation column">
-                    <h3 class="title">The End</h3>
+                    <h3 class="title">Refraction</h3>
+                    <h3 class="subtitle">The End</h3>
                     <p>
-                        Well, that's all for now. Hopefully we'll have new pages soon,
-                        covering topics like color, metamaterials, etc...
+                        Well, that's all for refraction. 
+                        Now you can try playing around with the light rays in this setup to the right.
+                        
                     </p>
                     <p>
-                        Until then, feel free to play around with the simulation to the right, 
-                        or any of the others on this site.
+                        Once you're done, you can move onto <a href="color.html">color.</a>
                     </p>
                 </div>
                 <div class="column sim-container" id="refraction_test"></div>
